@@ -1,5 +1,6 @@
 mpdscribble 0.18 - not yet released
   * improved detection of repeated songs
+  * support MPD's new MusicBrainz tags
 
 
 mpdscribble 0.17 - 2009-03-02
